tests/react_custom_funs/react_custom_funs.exp
Error: clone_element.js:22
 22: React.cloneElement(); // Error: Needs a minimum of two arguments.
     ^^^^^^^^^^^^^^^^^^^^ call of method `cloneElement`. React.cloneElement() must be passed at least 1 arguments.

Error: clone_element.js:23
 23: React.cloneElement('nope'); // Error: Not a valid element type.
                        ^^^^^^ string. Inexact type is incompatible with exact type
 23: React.cloneElement('nope'); // Error: Not a valid element type.
                        ^^^^^^ exact type: object type

Error: clone_element.js:24
 24: React.cloneElement({ type: any }); // Error: Not a valid element type.
                        ^^^^^^^^^^^^^ property `key`. Property not found in
 24: React.cloneElement({ type: any }); // Error: Not a valid element type.
                        ^^^^^^^^^^^^^ object literal

Error: clone_element.js:24
 24: React.cloneElement({ type: any }); // Error: Not a valid element type.
                        ^^^^^^^^^^^^^ property `props`. Property not found in
 24: React.cloneElement({ type: any }); // Error: Not a valid element type.
                        ^^^^^^^^^^^^^ object literal

Error: clone_element.js:24
 24: React.cloneElement({ type: any }); // Error: Not a valid element type.
                        ^^^^^^^^^^^^^ property `ref`. Property not found in
 24: React.cloneElement({ type: any }); // Error: Not a valid element type.
                        ^^^^^^^^^^^^^ object literal

Error: clone_element.js:28
 28: (React.cloneElement(a).type: Class<B>); // Error: `a` has a type of `A`.
      ^^^^^^^^^^^^^^^^^^^^^^^^^^ A. This type is incompatible with
 28: (React.cloneElement(a).type: Class<B>); // Error: `a` has a type of `A`.
                                        ^ B

Error: clone_element.js:30
 30: (React.cloneElement(a).props.bar: empty); // Error: `bar` does not exist.
                                  ^^^ property `bar`. Property not found in
 30: (React.cloneElement(a).props.bar: empty); // Error: `bar` does not exist.
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type

Error: clone_element.js:31
 31: (React.cloneElement(a).props.foo: string); // Error: `foo` is number.
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 31: (React.cloneElement(a).props.foo: string); // Error: `foo` is number.
                                       ^^^^^^ string

Error: clone_element.js:34
 34: (React.cloneElement(b).props.foo: string); // Error: `foo` is number.
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 34: (React.cloneElement(b).props.foo: string); // Error: `foo` is number.
                                       ^^^^^^ string

Error: clone_element.js:38
 38: React.cloneElement(a, {foo: 1, bar: 2}); // OK
                           ^^^^^^^^^^^^^^^^ property `bar` of object literal. Property not found in
  8: class A extends React.Component<{foo: number}, void> {}
                                     ^^^^^^^^^^^^^ object type

Error: clone_element.js:39
 39: React.cloneElement(a, {foo: '1'}); // Error: `foo` is a number.
                                 ^^^ string. This type is incompatible with
  8: class A extends React.Component<{foo: number}, void> {}
                                           ^^^^^^ number

Error: clone_element.js:43
 43: React.cloneElement(b, {foo: '1'}); // Error: `foo` is a number.
                                 ^^^ string. This type is incompatible with
  9: class B extends React.Component<{foo: number, bar: number}, void> {}
                                           ^^^^^^ number

Error: clone_element.js:47
 47: React.cloneElement(c, {children: '42'}); // Error: `children` is a number.
                                      ^^^^ string. This type is incompatible with
 10: class C extends React.Component<{children: number}, void> {}
                                                ^^^^^^ number

Error: clone_element.js:49
 49: React.cloneElement(c, {}, 1, 2, 3); // Error: `children` is not an array.
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
 10: class C extends React.Component<{children: number}, void> {}
                                                ^^^^^^ number

Error: clone_element.js:53
 53: React.cloneElement(d, {children: 42}); // Error: `children` is an array.
                                      ^^ number. This type is incompatible with
 11: class D extends React.Component<{children: Array<number>}, void> {}
                                                ^^^^^^^^^^^^^ array type

Error: clone_element.js:55
 55: React.cloneElement(d, {}, 42); // Error: `children` is an array.
                               ^^ number. This type is incompatible with
 11: class D extends React.Component<{children: Array<number>}, void> {}
                                                ^^^^^^^^^^^^^ array type

Error: create_element.js:7
  7: React.createElement(); // Error: Needs a minimum of two arguments.
     ^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`. React.createElement() must be passed at least 1 arguments.

Error: create_element.js:9
  9: React.createElement(42); // Error: Number is not a valid component type.
     ^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`. Expected React component instead of
  9: React.createElement(42); // Error: Number is not a valid component type.
                         ^^ number

Error: create_element.js:11
 11: React.createElement(42, {}); // Error: Number is not a valid component type.
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`. Expected React component instead of
 11: React.createElement(42, {}); // Error: Number is not a valid component type.
                         ^^ number

Error: create_element.js:12
 12: React.createElement({}, {}); // Error: Object is not a valid component type.
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`. Expected React component instead of
 12: React.createElement({}, {}); // Error: Object is not a valid component type.
                         ^^ object literal

Error: create_element.js:20
                            v
 20: React.createElement(A, {
 21:   foo: 42,
 22:   bar: 'Hello, world!', // Error: `bar` is a string.
 23: });
     ^ object literal. This type is incompatible with
 15: class A extends React.Component<{foo: number, bar: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `bar` is incompatible:
     22:   bar: 'Hello, world!', // Error: `bar` is a string.
                ^^^^^^^^^^^^^^^ string. This type is incompatible with
     15: class A extends React.Component<{foo: number, bar: number}> {}
                                                            ^^^^^^ number

Error: create_element.js:24
     v-----------------------
 24: React.createElement(B, {
 25:   foo: 42,
 26:   bar: 'Hello, world!', // Error: `bar` is a string.
 27: });
     -^ object literal. This type is incompatible with the expected param type of
 16: function B(props: {foo: number, bar: number}) {}
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `bar` is incompatible:
     26:   bar: 'Hello, world!', // Error: `bar` is a string.
                ^^^^^^^^^^^^^^^ string. This type is incompatible with
     16: function B(props: {foo: number, bar: number}) {}
                                              ^^^^^^ number

Error: create_element.js:28
 28: React.createElement(A, {foo: 42}); // Error: `bar` is missing.
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 15: class A extends React.Component<{foo: number, bar: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ property `bar`. Property not found in
 28: React.createElement(A, {foo: 42}); // Error: `bar` is missing.
                            ^^^^^^^^^ object literal

Error: create_element.js:29
 29: React.createElement(B, {foo: 42}); // Error: `bar` is missing.
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 16: function B(props: {foo: number, bar: number}) {}
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ property `bar`. Property not found in
 29: React.createElement(B, {foo: 42}); // Error: `bar` is missing.
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal

Error: create_element.js:34
 34: (React.createElement(A, {foo: 1, bar: 2}).props.foo: boolean); // Error: `foo`
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 34: (React.createElement(A, {foo: 1, bar: 2}).props.foo: boolean); // Error: `foo`
                                                          ^^^^^^^ boolean

Error: create_element.js:36
 36: (React.createElement(B, {foo: 1, bar: 2}).props.foo: boolean); // Error: `foo`
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 36: (React.createElement(B, {foo: 1, bar: 2}).props.foo: boolean); // Error: `foo`
                                                          ^^^^^^^ boolean

Error: create_element.js:38
 38: React.createElement(A, {foo: 1, bar: 2}).nope; // Error: `nope` does not exist.
                                              ^^^^ property `nope`. Property not found in
                                                                  v-
158: declare type React$Element<ElementType: React$ElementType> = {|
159:   +type: ElementType;
160:   +props: React$ElementProps<ElementType>;
...:
163: |};
     -^ object type. See lib: <BUILTINS>/react.js:158

Error: create_element.js:39
 39: React.createElement(B, {foo: 1, bar: 2}).nope; // Error: `nope` does not exist.
                                              ^^^^ property `nope`. Property not found in
                                                                  v-
158: declare type React$Element<ElementType: React$ElementType> = {|
159:   +type: ElementType;
160:   +props: React$ElementProps<ElementType>;
...:
163: |};
     -^ object type. See lib: <BUILTINS>/react.js:158

Error: create_element.js:40
 40: React.createElement(A); // Error: Missing `foo` and `bar`.
     ^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 15: class A extends React.Component<{foo: number, bar: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ property `bar`. Property not found in
 40: React.createElement(A); // Error: Missing `foo` and `bar`.
     ^^^^^^^^^^^^^^^^^^^^^^ props of React element

Error: create_element.js:40
 40: React.createElement(A); // Error: Missing `foo` and `bar`.
     ^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 15: class A extends React.Component<{foo: number, bar: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ property `foo`. Property not found in
 40: React.createElement(A); // Error: Missing `foo` and `bar`.
     ^^^^^^^^^^^^^^^^^^^^^^ props of React element

Error: create_element.js:41
 41: React.createElement(B); // Error: Missing `foo` and `bar`.
     ^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 16: function B(props: {foo: number, bar: number}) {}
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ property `bar`. Property not found in
 41: React.createElement(B); // Error: Missing `foo` and `bar`.
     ^^^^^^^^^^^^^^^^^^^^^^ props of React element

Error: create_element.js:41
 41: React.createElement(B); // Error: Missing `foo` and `bar`.
     ^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 16: function B(props: {foo: number, bar: number}) {}
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ property `foo`. Property not found in
 41: React.createElement(B); // Error: Missing `foo` and `bar`.
     ^^^^^^^^^^^^^^^^^^^^^^ props of React element

Error: create_element.js:51
                            v
 51: React.createElement(C, {
 52:   foo: 42,
 53:   bar: 'Hello, world!', // Error: `bar` is a string.
 54: });
     ^ object literal. This type is incompatible with
 43: class C extends React.Component<{foo: number, bar: number}> {
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `bar` is incompatible:
     53:   bar: 'Hello, world!', // Error: `bar` is a string.
                ^^^^^^^^^^^^^^^ string. This type is incompatible with
     43: class C extends React.Component<{foo: number, bar: number}> {
                                                            ^^^^^^ number

Error: create_element.js:55
     v-----------------------
 55: React.createElement(D, {
 56:   foo: 42,
 57:   bar: 'Hello, world!', // Error: `bar` is a string.
 58: });
     -^ object literal. This type is incompatible with the expected param type of
 46: function D(props: {foo: number, bar: number}) {}
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `bar` is incompatible:
     57:   bar: 'Hello, world!', // Error: `bar` is a string.
                ^^^^^^^^^^^^^^^ string. This type is incompatible with
     46: function D(props: {foo: number, bar: number}) {}
                                              ^^^^^^ number

Error: create_element.js:67
 67: React.createElement(E, {}); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 66: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
 67: React.createElement(E, {}); // Error
                            ^^ object literal

Error: create_element.js:69
 69: React.createElement(E, {}, 1, 2); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 66: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     69: React.createElement(E, {}, 1, 2); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
     66: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:70
 70: React.createElement(E, {}, 1, 2, 3); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 66: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     70: React.createElement(E, {}, 1, 2, 3); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
     66: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:71
 71: React.createElement(E, {}, [1, 2]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 66: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     71: React.createElement(E, {}, [1, 2]); // Error
                                    ^^^^^^ array literal. This type is incompatible with
     66: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:72
 72: React.createElement(E, {}, [1, 2], [3, 4]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 66: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     72: React.createElement(E, {}, [1, 2], [3, 4]); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
     66: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:73
 73: React.createElement(E, {}, ...[]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 66: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
 73: React.createElement(E, {}, ...[]); // Error
                            ^^ object literal

Error: create_element.js:75
 75: React.createElement(E, {}, ...[1, 2]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 66: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     75: React.createElement(E, {}, ...[1, 2]); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
     66: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:76
 76: React.createElement(E, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 66: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     76: React.createElement(E, {}, ...(any: Array<number>)); // Error
                                             ^^^^^^^^^^^^^ React children array, undefined, or array. This type is incompatible with
     66: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:76
 76: React.createElement(E, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 66: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     76: React.createElement(E, {}, ...(any: Array<number>)); // Error
                                             ^^^^^^^^^^^^^ undefined. This type is incompatible with
     66: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:78
 78: React.createElement(E, {}, 1, ...[2]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 66: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     78: React.createElement(E, {}, 1, ...[2]); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
     66: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:79
 79: React.createElement(E, {}, 1, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 66: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     79: React.createElement(E, {}, 1, ...(any: Array<number>)); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array or number. This type is incompatible with
     66: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:82
 82: React.createElement(F, {}); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 81: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
 82: React.createElement(F, {}); // Error
                            ^^ object literal

Error: create_element.js:83
 83: React.createElement(F, {}, 1); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 81: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     83: React.createElement(F, {}, 1); // Error
                                    ^ number. This type is incompatible with
     81: class F extends React.Component<{children: Array<number>}> {}
                                                    ^^^^^^^^^^^^^ array type

Error: create_element.js:87
 87: React.createElement(F, {}, [1, 2], [3, 4]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 87: React.createElement(F, {}, [1, 2], [3, 4]); // Error
                                ^^^^^^ array literal. This type is incompatible with
 81: class F extends React.Component<{children: Array<number>}> {}
                                                      ^^^^^^ number

Error: create_element.js:87
 87: React.createElement(F, {}, [1, 2], [3, 4]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 87: React.createElement(F, {}, [1, 2], [3, 4]); // Error
                                        ^^^^^^ array literal. This type is incompatible with
 81: class F extends React.Component<{children: Array<number>}> {}
                                                      ^^^^^^ number

Error: create_element.js:88
 88: React.createElement(F, {}, ...[]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 81: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
 88: React.createElement(F, {}, ...[]); // Error
                            ^^ object literal

Error: create_element.js:89
 89: React.createElement(F, {}, ...[1]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 81: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     89: React.createElement(F, {}, ...[1]); // Error
                                        ^ number. This type is incompatible with
     81: class F extends React.Component<{children: Array<number>}> {}
                                                    ^^^^^^^^^^^^^ array type

Error: create_element.js:91
 91: React.createElement(F, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 81: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     81: class F extends React.Component<{children: Array<number>}> {}
                                                          ^^^^^^ number. This type is incompatible with
     81: class F extends React.Component<{children: Array<number>}> {}
                                                    ^^^^^^^^^^^^^ array type

Error: create_element.js:91
 91: React.createElement(F, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 81: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     91: React.createElement(F, {}, ...(any: Array<number>)); // Error
                                             ^^^^^^^^^^^^^ undefined. This type is incompatible with
     81: class F extends React.Component<{children: Array<number>}> {}
                                                    ^^^^^^^^^^^^^ array type

Error: create_element.js:91
 91: React.createElement(F, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 81: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     91: React.createElement(F, {}, ...(any: Array<number>)); // Error
                                                   ^^^^^^ number. This type is incompatible with
     81: class F extends React.Component<{children: Array<number>}> {}
                                                    ^^^^^^^^^^^^^ array type

Error: create_element.js:92
 92: React.createElement(F, {}, 1, ...[]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 81: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     92: React.createElement(F, {}, 1, ...[]); // Error
                                    ^ number. This type is incompatible with
     81: class F extends React.Component<{children: Array<number>}> {}
                                                    ^^^^^^^^^^^^^ array type

Error: create_element.js:94
 94: React.createElement(F, {}, 1, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 81: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     94: React.createElement(F, {}, 1, ...(any: Array<number>)); // Error
                                    ^ number. This type is incompatible with
     81: class F extends React.Component<{children: Array<number>}> {}
                                                    ^^^^^^^^^^^^^ array type

Error: create_element.js:97
 97: React.createElement(G, {}); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 96: class G extends React.Component<{children: number | Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
 97: React.createElement(G, {}); // Error
                            ^^ object literal

Error: create_element.js:102
102: React.createElement(G, {}, [1, 2], [3, 4]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
102: React.createElement(G, {}, [1, 2], [3, 4]); // Error
                                ^^^^^^ array literal. This type is incompatible with
 96: class G extends React.Component<{children: number | Array<number>}> {}
                                                               ^^^^^^ number

Error: create_element.js:102
102: React.createElement(G, {}, [1, 2], [3, 4]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
102: React.createElement(G, {}, [1, 2], [3, 4]); // Error
                                        ^^^^^^ array literal. This type is incompatible with
 96: class G extends React.Component<{children: number | Array<number>}> {}
                                                               ^^^^^^ number

Error: create_element.js:103
103: React.createElement(G, {}, ...[]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 96: class G extends React.Component<{children: number | Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
103: React.createElement(G, {}, ...[]); // Error
                            ^^ object literal

Error: create_element.js:106
106: React.createElement(G, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
106: React.createElement(G, {}, ...(any: Array<number>)); // Error
                                         ^^^^^^^^^^^^^ undefined. This type is incompatible with
 96: class G extends React.Component<{children: number | Array<number>}> {}
                                                ^^^^^^^^^^^^^^^^^^^^^^ union: number | array type
  Member 1:
   96: class G extends React.Component<{children: number | Array<number>}> {}
                                                  ^^^^^^ number
  Error:
  106: React.createElement(G, {}, ...(any: Array<number>)); // Error
                                           ^^^^^^^^^^^^^ undefined. This type is incompatible with
   96: class G extends React.Component<{children: number | Array<number>}> {}
                                                  ^^^^^^ number
  Member 2:
   96: class G extends React.Component<{children: number | Array<number>}> {}
                                                           ^^^^^^^^^^^^^ array type
  Error:
  106: React.createElement(G, {}, ...(any: Array<number>)); // Error
                                           ^^^^^^^^^^^^^ undefined. This type is incompatible with
   96: class G extends React.Component<{children: number | Array<number>}> {}
                                                           ^^^^^^^^^^^^^ array type

Error: create_element.js:117
117: React.createElement(G2, {}, [1, 2], [3, 4]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
117: React.createElement(G2, {}, [1, 2], [3, 4]); // Error
                                 ^^^^^^ array literal. This type is incompatible with
111: class G2 extends React.Component<{children?: number | Array<number>}> {}
                                                                 ^^^^^^ number

Error: create_element.js:117
117: React.createElement(G2, {}, [1, 2], [3, 4]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
117: React.createElement(G2, {}, [1, 2], [3, 4]); // Error
                                         ^^^^^^ array literal. This type is incompatible with
111: class G2 extends React.Component<{children?: number | Array<number>}> {}
                                                                 ^^^^^^ number

Error: create_element.js:128
128: React.createElement(H, {}); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
127: class H extends React.Component<{children: NumberArrayRecursive}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
128: React.createElement(H, {}); // Error
                            ^^ object literal

Error: create_element.js:134
134: React.createElement(H, {}, ...[]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
127: class H extends React.Component<{children: NumberArrayRecursive}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
134: React.createElement(H, {}, ...[]); // Error
                            ^^ object literal

Error: create_element.js:137
137: React.createElement(H, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
137: React.createElement(H, {}, ...(any: Array<number>)); // Error
                                         ^^^^^^^^^^^^^ undefined. This type is incompatible with
127: class H extends React.Component<{children: NumberArrayRecursive}> {}
                                                ^^^^^^^^^^^^^^^^^^^^ union: number | array type
  Member 1:
  126: type NumberArrayRecursive = number | Array<NumberArrayRecursive>;
                                   ^^^^^^ number
  Error:
  137: React.createElement(H, {}, ...(any: Array<number>)); // Error
                                           ^^^^^^^^^^^^^ undefined. This type is incompatible with
  126: type NumberArrayRecursive = number | Array<NumberArrayRecursive>;
                                   ^^^^^^ number
  Member 2:
  126: type NumberArrayRecursive = number | Array<NumberArrayRecursive>;
                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ array type
  Error:
  137: React.createElement(H, {}, ...(any: Array<number>)); // Error
                                           ^^^^^^^^^^^^^ undefined. This type is incompatible with
  126: type NumberArrayRecursive = number | Array<NumberArrayRecursive>;
                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ array type

Error: create_element.js:145
145: React.createElement(I, {}, null); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
142: class I extends React.Component<{children?: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    145: React.createElement(I, {}, null); // Error
                                    ^^^^ null. This type is incompatible with
    142: class I extends React.Component<{children?: number}> {}
                                                     ^^^^^^ number

Error: create_element.js:147
147: React.createElement(I, {}, 1, 2); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
142: class I extends React.Component<{children?: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    147: React.createElement(I, {}, 1, 2); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
    142: class I extends React.Component<{children?: number}> {}
                                                     ^^^^^^ number

Error: create_element.js:150
150: React.createElement(I, {}, ...[1, 2]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
142: class I extends React.Component<{children?: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    150: React.createElement(I, {}, ...[1, 2]); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
    142: class I extends React.Component<{children?: number}> {}
                                                     ^^^^^^ number

Error: create_element.js:151
151: React.createElement(I, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
142: class I extends React.Component<{children?: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    151: React.createElement(I, {}, ...(any: Array<number>)); // Error
                                             ^^^^^^^^^^^^^ React children array, undefined, or array. This type is incompatible with
    142: class I extends React.Component<{children?: number}> {}
                                                     ^^^^^^ number

Error: create_element.js:153
153: React.createElement(I, {}, 1, ...[2]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
142: class I extends React.Component<{children?: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    153: React.createElement(I, {}, 1, ...[2]); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
    142: class I extends React.Component<{children?: number}> {}
                                                     ^^^^^^ number

Error: create_element.js:154
154: React.createElement(I, {}, 1, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
142: class I extends React.Component<{children?: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    154: React.createElement(I, {}, 1, ...(any: Array<number>)); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array or number. This type is incompatible with
    142: class I extends React.Component<{children?: number}> {}
                                                     ^^^^^^ number

Error: create_element.js:157
157: React.createElement(J, {}); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
156: class J extends React.Component<{children: ?number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
157: React.createElement(J, {}); // Error
                            ^^ object literal

Error: create_element.js:161
161: React.createElement(J, {}, 1, 2); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
156: class J extends React.Component<{children: ?number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    161: React.createElement(J, {}, 1, 2); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
    156: class J extends React.Component<{children: ?number}> {}
                                                     ^^^^^^ number

Error: create_element.js:162
162: React.createElement(J, {}, ...[]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
156: class J extends React.Component<{children: ?number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
162: React.createElement(J, {}, ...[]); // Error
                            ^^ object literal

Error: create_element.js:164
164: React.createElement(J, {}, ...[1, 2]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
156: class J extends React.Component<{children: ?number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    164: React.createElement(J, {}, ...[1, 2]); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
    156: class J extends React.Component<{children: ?number}> {}
                                                     ^^^^^^ number

Error: create_element.js:165
165: React.createElement(J, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
156: class J extends React.Component<{children: ?number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    165: React.createElement(J, {}, ...(any: Array<number>)); // Error
                                             ^^^^^^^^^^^^^ React children array, undefined, or array. This type is incompatible with
    156: class J extends React.Component<{children: ?number}> {}
                                                     ^^^^^^ number

Error: create_element.js:167
167: React.createElement(J, {}, 1, ...[2]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
156: class J extends React.Component<{children: ?number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    167: React.createElement(J, {}, 1, ...[2]); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
    156: class J extends React.Component<{children: ?number}> {}
                                                     ^^^^^^ number

Error: create_element.js:168
168: React.createElement(J, {}, 1, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
156: class J extends React.Component<{children: ?number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    168: React.createElement(J, {}, 1, ...(any: Array<number>)); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array or number. This type is incompatible with
    156: class J extends React.Component<{children: ?number}> {}
                                                     ^^^^^^ number

Error: create_element.js:174
174: React.createElement(K, {}, '42'); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
170: class K extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    174: React.createElement(K, {}, '42'); // Error
                                    ^^^^ string. This type is incompatible with
    170: class K extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:175
175: React.createElement(K, {children: '42'}); // Error
                            ^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
170: class K extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    175: React.createElement(K, {children: '42'}); // Error
                                           ^^^^ string. This type is incompatible with
    170: class K extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:176
176: React.createElement(K, {children: '42'}, 42); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
170: class K extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    176: React.createElement(K, {children: '42'}, 42); // Error
                                           ^^^^ string. This type is incompatible with
    170: class K extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:178
178: React.createElement(K, {children: '42'}, '42'); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
170: class K extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    178: React.createElement(K, {children: '42'}, '42'); // Error
                                           ^^^^ string. This type is incompatible with
    170: class K extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:191
191: React.createElement(L, {}, 1); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
                                     v
180: class L extends React.Component<{
181:   foo: number,
182:   bar: number,
183:   children: number,
184: }> {
     ^ property `foo`. Property not found in
191: React.createElement(L, {}, 1); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element

Error: create_element.js:192
192: React.createElement(L, {children: 1}); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
                                     v
180: class L extends React.Component<{
181:   foo: number,
182:   bar: number,
183:   children: number,
184: }> {
     ^ property `foo`. Property not found in
192: React.createElement(L, {children: 1}); // Error
                            ^^^^^^^^^^^^^ object literal

Error: create_element.js:193
193: React.createElement(L, {bar: 1}, 2); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
                                     v
180: class L extends React.Component<{
181:   foo: number,
182:   bar: number,
183:   children: number,
184: }> {
     ^ property `foo`. Property not found in
193: React.createElement(L, {bar: 1}, 2); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element

Error: create_element.js:194
194: React.createElement(L, {bar: 1, children: 2}); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
                                     v
180: class L extends React.Component<{
181:   foo: number,
182:   bar: number,
183:   children: number,
184: }> {
     ^ property `foo`. Property not found in
194: React.createElement(L, {bar: 1, children: 2}); // Error
                            ^^^^^^^^^^^^^^^^^^^^^ object literal

Error: create_element.js:195
195: React.createElement(L, {foo: '1', bar: 2}, 3); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
                                     v
180: class L extends React.Component<{
181:   foo: number,
182:   bar: number,
183:   children: number,
184: }> {
     ^ object type
  Property `foo` is incompatible:
    195: React.createElement(L, {foo: '1', bar: 2}, 3); // Error
                                      ^^^ string. This type is incompatible with
    181:   foo: number,
                ^^^^^^ number

Error: create_element.js:196
196: React.createElement(L, {foo: '1', bar: 2, children: 3}); // Error
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
                                     v
180: class L extends React.Component<{
181:   foo: number,
182:   bar: number,
183:   children: number,
184: }> {
     ^ object type
  Property `foo` is incompatible:
    196: React.createElement(L, {foo: '1', bar: 2, children: 3}); // Error
                                      ^^^ string. This type is incompatible with
    181:   foo: number,
                ^^^^^^ number

Error: create_element.js:197
197: React.createElement(L, {foo: 1, bar: '2'}, 3); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
                                     v
180: class L extends React.Component<{
181:   foo: number,
182:   bar: number,
183:   children: number,
184: }> {
     ^ object type
  Property `bar` is incompatible:
    197: React.createElement(L, {foo: 1, bar: '2'}, 3); // Error
                                              ^^^ string. This type is incompatible with
    182:   bar: number,
                ^^^^^^ number

Error: create_element.js:198
198: React.createElement(L, {foo: 1, bar: '2', children: 3}); // Error
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
                                     v
180: class L extends React.Component<{
181:   foo: number,
182:   bar: number,
183:   children: number,
184: }> {
     ^ object type
  Property `bar` is incompatible:
    198: React.createElement(L, {foo: 1, bar: '2', children: 3}); // Error
                                              ^^^ string. This type is incompatible with
    182:   bar: number,
                ^^^^^^ number

Error: create_element.js:199
199: React.createElement(L, {foo: 1, bar: 2}, '3'); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
                                     v
180: class L extends React.Component<{
181:   foo: number,
182:   bar: number,
183:   children: number,
184: }> {
     ^ object type
  Property `children` is incompatible:
    199: React.createElement(L, {foo: 1, bar: 2}, '3'); // Error
                                                  ^^^ string. This type is incompatible with
    183:   children: number,
                     ^^^^^^ number

Error: create_element.js:200
200: React.createElement(L, {foo: 1, bar: 2, children: '3'}); // Error
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
                                     v
180: class L extends React.Component<{
181:   foo: number,
182:   bar: number,
183:   children: number,
184: }> {
     ^ object type
  Property `children` is incompatible:
    200: React.createElement(L, {foo: 1, bar: 2, children: '3'}); // Error
                                                           ^^^ string. This type is incompatible with
    183:   children: number,
                     ^^^^^^ number

Error: create_element.js:205
205: (React.createElement(M).type: typeof N); // Error
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ M. This type is incompatible with
203: class N extends React.Component<{}> {}
           ^ N


Found 94 errors
